--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
-a {
-  text-decoration: none;
+/***********************
+GENERAL
+***********************/
+
+
+body{
+  font-family: 'Architects+Daughter', cursive;
 }
 
 #wrapper {
@@ -8,43 +13,95 @@ a {
    padding: 0 5%;
 }
 
+a {
+  text-decoration: none;
+}
+
+
+/***********************
+HEADING
+***********************/
 #logo {
   text-align: center;
   margin: 0;
 }
 
-
-a {
-  color:#ffff00;
+h1{
+  font-family: 'Changa One', cursive;
+  margin: 15px 0;
+  font-size: 1.75em;
+  font-weight: normal;
+  line-height: 0.8em;
+}
+h2{
+font-size: 0.75em;
+  margin: -5px 0 0;
+  font-weight: normal;
 }
 
-header {
-  background: #6ab47b;
-  border-color: #599a68;
-}
-
-
-h1, h2 {
-  color: #fff;
-}
-
+/***********************
+NAVIGATION
+***********************/
 nav {
-  background: #599a68;
-}
-  
-nav a, nav a:visited {
-  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  margin: 20px 0 0;
 }
 
-nav a.selected, nav a:hover {
-    color: #32673f;
+/***********************
+FOOTER
+***********************/ 
+
+footer{
+   font-size: 0.75em;
+  text-align: center;
+  padding-top: 50px
+    color: #ccc
+
 }
 
+/***********************
+COLORS
+***********************/
+
+/* site body */
 
 body {
   background-color: #fff;
   color: #999;
 }
+
+/* green header */
+header {
+  background: #6ab47b;
+  border-color: #599a68;
+}
+
+/* nav background on mobile */
+nav {
+  background: #599a68;
+}
+  
+/* logo text */
+h1, h2 {
+  color: #fff;
+}
+
+/* links */
+a {
+  color:#ffff00;
+}
+
+/* nav link */
+nav a, nav a:visited {
+  color: #fff;
+}
+
+/* selected nav link */
+nav a.selected, nav a:hover {
+    color: #32673f;
+}
+
 
 
 
