--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ GENERAL
 
 
 body{
-  font-family: 'Architects+Daughter', cursive;
+  font-family: 'Lobster', cursive;
 }
 
 #wrapper {
@@ -14,20 +14,30 @@ body{
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none
 }
 
-
+img{
+  max-width: 100%;
+}
 /***********************
 HEADING
 ***********************/
+
+header{
+  float: left;
+  margin: 0 0 30px 0;
+  padding: 5px 0 0 0;
+  /*set up a width, because it's now a float element*/
+  width: 100%;
+  }
 #logo {
   text-align: center;
   margin: 0;
 }
-
+    
 h1{
-  font-family: 'Changa One', cursive;
+  font-family: 'Shadows+Into+Light', cursive;
   margin: 15px 0;
   font-size: 1.75em;
   font-weight: normal;
@@ -44,8 +54,26 @@ NAVIGATION
 ***********************/
 nav {
   text-align: center;
-  padding: 10px 0;
-  margin: 20px 0 0;
+  /*padding: 10px 0;*/
+   padding-top:10px;
+   padding-bottom:10px;   
+   margin: 20px 0 0;
+}
+
+nav ul {
+   list-style : none;
+   margin: 0 10px;
+   padding: 0;
+   }
+
+nav li {
+  display: inline-block; /*will allow list items to appear horizontally*/
+}
+
+nav a {
+  font-weight: 800; /*let the words become fatter or slim*/
+  padding: 15px 10px; /*make it more easy to click, the click area become bigger*/
+  
 }
 
 /***********************
@@ -55,9 +83,51 @@ FOOTER
 footer{
    font-size: 0.75em;
   text-align: center;
+  /*clear means both side of the footer has nothing*/
+  clear: both;
   padding-top: 50px
     color: #ccc
+}
 
+.social-icon{
+  width: 20px; /*resize the icon => 40px -> 20px*/
+  height: 20px;
+  margin: 0 5px;  
+}
+/***********************
+PAGE: PROTFOLIO
+***********************/
+
+#gallery {
+  margin: 0;
+  padding:0;
+  list-style: none;
+}
+
+#gallery li {
+  float: left;
+  width: 45%;
+  margin: 2.5%;
+  background-color: #f65b7c
+  color: #bdc3c7;
+}
+
+#gallery li a p {
+  margin: 0;
+  padding: 5%;
+  font-size: 0.75em;
+  color: #bdc3c7;
+}
+  
+/***********************
+PAGE: ABOUT
+***********************/
+
+.profile-photo {
+  display: block;
+  max-width: 150px;
+  margin: 0 auto 30px;
+  border-radius: 100%;
 }
 
 /***********************
@@ -99,7 +169,7 @@ nav a, nav a:visited {
 
 /* selected nav link */
 nav a.selected, nav a:hover {
-    color: #32673f;
+    color: #ff0000;
 }
 
 
