--- a/css/imagetest.css
+++ b/css/imagetest.css
@@ -1,13 +1,82 @@
+
+
+img {
+        width:  702px;
+        height: 602px;
+}
 .container {
-    
     border: 1px solid #666666;
     width : 700px;
     height: 600px;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
 .centerbox {
     border: 1px solid #aaffaa;
-    width : 200px;
-    height: 200px;
-    background-color: yellow;
+    width : 400px;
+    height: 400px;
+    background-color: rgba(300, 400, 800, 0.7);
+    position: absolute;
+    top: 100px;
+    left: 150px;
+    position: absolute;
 }
+h{
+    text-decoration: none;
+}
+h1 {
+    color: #013ADF;
+    font-family: 'Sigmar One', cursive;
+    margin: 30px 0px 10px;
+    font-size: 2.5em;
+    font-weight: normal;
+}
+
+h2{
+    color: #5858FA;
+    font-family: 'Architects Daughter', cursive; 
+    margin: -10px 20px;
+    font-size: 1.3em;
+}
+
+h3{
+    color: #424242;
+    font-family: 'Coming Soon', cursive;
+    margin: 30px 10px;
+    font-size: 1em;
+}
+   .input1 {
+        background-color: #fff;
+        color: #013ADF;
+        font-family: 'Architects Daughter', cursive;
+        font-size: 1.2em;
+        margin: 0px 10px;
+        padding: 10px 10px;
+}
+
+   .input2 {
+        float: left;
+        background-color: #013ADF;
+        color: #fff;
+        font-family: 'Architects Daughter', cursive;
+        font-size: 1.2em;
+        margin: -50px 255px;
+        padding: 10px 10px;
+        
+    }
+    .social-icon {
+        width: 20px;
+        height: 20px;
+        margin: 50px 360px;
+    }
+
+    footer p {
+        color: #013ADF;
+        margin: -70px 20px;
+        font-size: 0.8em;
+        font-family: 'Coming Soon', cursive;
+        font-weight: bold;
+        
+    }
